--- a/styles/index.css
+++ b/styles/index.css
@@ -1,11 +1,12 @@
 body {
     background-color: #2541B2;
+    font-family: 'Montserrat';
 }
 button {
     background-color: #2C71B8;
     color: #FFFFFF;
-    font-family: 'Montserrat';
 }
+
 .square {
     width: 100%;
     height: 0;
@@ -29,4 +30,13 @@ button {
     bottom: 0;
     right: 0;
     width: 100%;
+}
+
+#topNavBar .nav-link {
+    font-size: 1.25rem;
+    color: #FFFFFF;
+}
+#topNavBar .nav-link:hover {
+    color: #FFCB05;
+    font-size: 1.25rem;
 }
