Viewing Favourited Pokemon
A feature was added so that when the favourites link is pressed it reloads the pokemon grid with the favourited pokemon and when the logo is pressed returns to the pokemon browser page.

--- a/styles/index.css
+++ b/styles/index.css
@@ -125,6 +125,7 @@ table {
 }
 #topNavBar .nav-link:hover {
     color: #FFCB05;
+    cursor: pointer; 
 }
 
 #bottomNavBar .btn {
@@ -142,4 +143,6 @@ table {
 #next-btn {
     display: none;
 }
-
+#logo {
+    cursor: pointer;
+}
